# Kypca4

./: README.md  main.py  pyproject.toml
Tests/: test_load_operations.py  test_masked_operation.py
src/: main.py  settings.py  utils.py
tests/: test_load_operations.py  test_masked_operation.py  test_print_operation.py  test_process_operation.py
