[tool.poetry]
name = "kypca4"
version = "0.1.0"
description = ""
authors = ["Roman Shemchuk <shemchuk.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
